[package]
name = "actix_test"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
config = "0.14.0"
flexi_logger = "0.29.3"
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.129"
serde_yaml = "0.9.34"
tokio = { version = "1.40.0", features = ["signal", "macros"] }
